--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /*////////////// Fonts //////////////*/
 
 /* link the web font used for the level 1 heading here */
+@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville');
 
 /*////////// Global Styles //////////*/
 
@@ -18,3 +19,23 @@ body {
 }
 
 /* Write all remaining styles here */
+
+h1 {
+  font-family: "Libre Baskerville";
+}
+
+h1, h2 {
+  color: #98a39f;
+  font-weight: bold;
+}
+img {
+  border:4px solid #98a39f;
+}
+
+a img:hover {
+  border: 4px solid #685e69;  
+}
+
+.foot {
+  float: right;
+}
